# mlops-example-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.py  inference.py  main.py  pyproject.toml  train.py
.dvc/: .gitignore  config
.github/workflows/: checks.yml
conf/: config.yaml
data/: PokemonData.dvc  download_data.sh
datasets/: __init__.py  dataset.py
ds/: dataset.py  models.py  runner.py  tracking.py
notebooks/: MLOps_project_CNN.ipynb
weights/: download_weights.sh
