[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Igor Astashov <astashovivl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
