[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Igor Astashov <astashovivl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
gdown = "^4.7.1"
torchvision = "^0.16.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
ipython = "^8.18.1"
wandb = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
