[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Igor Astashov <astashovivl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
gdown = "^4.7.1"
torchvision = "^0.16.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
ipython = "^8.18.1"
wandb = "^0.16.1"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.13.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
dvc = "^3.33.3"

[tool.black]
line-length = 90
target-version = ["py37"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
